--- a/mysite/templates/chess/chess_board.html
+++ b/mysite/templates/chess/chess_board.html
@@ -3,96 +3,110 @@
 {% block title %}chess board{% endblock %}
 
 {% block content %}
-    <table border="1" class="chess">
+    <table border="1" class="chess" style="width:250px; height:250px;" >
         <tr>
             <!-- 1-8 -->
-            <td bgcolor="white" class="white">&#9812;</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="white" id="A8"></td>
+            <td bgcolor="grey" id="B8"></td>
+            <td bgcolor="white" id="C8"></td>
+            <td bgcolor="grey" id="D8"></td>
+            <td bgcolor="white" id="E8"></td>
+            <td bgcolor="grey" id="F8"></td>
+            <td bgcolor="white" id="G8"></td>
+            <td bgcolor="grey" id="H8"></td>
+
         </tr>
         <tr>
 
-            <td>2</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="grey" id="A7"></td>
+            <td bgcolor="white" id="B7"></td>
+            <td bgcolor="grey" id="C7"></td>
+            <td bgcolor="white" id="D7"></td>
+            <td bgcolor="grey" id="E7"></td>
+            <td bgcolor="white" id="F7"></td>
+            <td bgcolor="grey" id="G7"></td>
+            <td bgcolor="white" id="H7"></td>
         </tr>
                 <tr>
 
-            <td>3</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="white" id="A6"></td>
+            <td bgcolor="grey" id="B6"></td>
+            <td bgcolor="white" id="C6"></td>
+            <td bgcolor="grey" id="D6"></td>
+            <td bgcolor="white" id="E6"></td>
+            <td bgcolor="grey" id="F6"></td>
+            <td bgcolor="white" id="G6"></td>
+            <td bgcolor="grey" id="H6"></td>
         </tr>
                 <tr>
 
-            <td>4</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="grey" id="A5"></td>
+            <td bgcolor="white" id="B5"></td>
+            <td bgcolor="grey" id="C5"></td>
+            <td bgcolor="white" id="D5"></td>
+            <td bgcolor="grey" id="E5"></td>
+            <td bgcolor="white" id="F5"></td>
+            <td bgcolor="grey" id="G5"></td>
+            <td bgcolor="white" id="H5"></td>
         </tr>
                 <tr>
 
-            <td>5</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="white" id="A4"></td>
+            <td bgcolor="grey" id="B4"></td>
+            <td bgcolor="white" id="C4"></td>
+            <td bgcolor="grey" id="D4"></td>
+            <td bgcolor="white" id="E4"></td>
+            <td bgcolor="grey" id="F4"></td>
+            <td bgcolor="white" id="G4"></td>
+            <td bgcolor="grey" id="H4"></td>
         </tr>
                 <tr>
 
-            <td>6</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="grey" id="A3"></td>
+            <td bgcolor="white" id="B3"></td>
+            <td bgcolor="grey" id="C3"></td>
+            <td bgcolor="white" id="D3"></td>
+            <td bgcolor="grey" id="E3"></td>
+            <td bgcolor="white" id="F3"></td>
+            <td bgcolor="grey" id="G3"></td>
+            <td bgcolor="white" id="H3"></td>
         </tr>
                 <tr>
 
-            <td>7</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="white" id="A2"></td>
+            <td bgcolor="grey" id="B2"></td>
+            <td bgcolor="white" id="C2"></td>
+            <td bgcolor="grey" id="D2"></td>
+            <td bgcolor="white" id="E2"></td>
+            <td bgcolor="grey" id="F2"></td>
+            <td bgcolor="white" id="G2"></td>
+            <td bgcolor="grey" id="H2"></td>
         </tr>
                 <tr>
 
-            <td>8</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
+            <td bgcolor="grey" id="A1"></td>
+            <td bgcolor="white" id="B1"></td>
+            <td bgcolor="grey" id="C1"></td>
+            <td bgcolor="white" id="D1"></td>
+            <td bgcolor="grey" id="E1"></td>
+            <td bgcolor="white" id="F1"></td>
+            <td bgcolor="grey" id="G1"></td>
+            <td bgcolor="white" id="H1"></td>
         </tr>
 
 
     </table>
+
+<script type="text/javascript">
+    function myFunction() {
+        document.getElementById("A8").innerHTML = "{{ position.A8|safe }}";
+    }
+
+    function myFunction() {
+        {% for key, value in position.items %}
+            document.getElementById("{{ key }}").innerHTML = "{{ value|safe }}";
+        {% endfor %}
+    }
+    myFunction();
+</script>
 {% endblock %}
