--- a/mysite/templates/base3.html
+++ b/mysite/templates/base3.html
@@ -25,9 +25,7 @@
 
 
                 <a href="{% url 'list openings'  %}">debiuty</a>
-                <div class="hover_img">
-                    <a href="#">gracze<span><img src="{% static "chess/images/player1.jpg" %}" alt="image" height="100" /></span></a>
-                </div>
+                <a href="{% url 'players' %}">gracze</a>
                 <a href="{% url 'chess board' %}">szachownica</a>
                 <a>FIDE</a>
                 <a>literatura</a>
