--- a/mysite/templates/chess/chess_board.html
+++ b/mysite/templates/chess/chess_board.html
@@ -1,102 +1,158 @@
 {% extends 'base3.html' %}
+{% load static %}
 
 {% block title %}chess board{% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static "chess/styles/1chess_board.css" %}">
+{% block headsingle %}{% endblock %}
+{% endblock %}
+
 
 {% block content %}
 {% block rest %}{% endblock %}
 
 
-    <table border="1" class="chess" style="width:250px; height:250px;" >
-        <tr>
-            <!-- 1-8 -->
-            <td bgcolor="white" id="A8"></td>
-            <td bgcolor="grey" id="B8"></td>
-            <td bgcolor="white" id="C8"></td>
-            <td bgcolor="grey" id="D8"></td>
-            <td bgcolor="white" id="E8"></td>
-            <td bgcolor="grey" id="F8"></td>
-            <td bgcolor="white" id="G8"></td>
-            <td bgcolor="grey" id="H8"></td>
+    <table class="chess">
+        <thead>
+           <tr class="letters">
+                <td></td>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+                <td>D</td>
+                <td>E</td>
+                <td>F</td>
+                <td>G</td>
+                <td>H</td>
 
-        </tr>
-        <tr>
+           </tr>
 
-            <td bgcolor="grey" id="A7"></td>
-            <td bgcolor="white" id="B7"></td>
-            <td bgcolor="grey" id="C7"></td>
-            <td bgcolor="white" id="D7"></td>
-            <td bgcolor="grey" id="E7"></td>
-            <td bgcolor="white" id="F7"></td>
-            <td bgcolor="grey" id="G7"></td>
-            <td bgcolor="white" id="H7"></td>
-        </tr>
-                <tr>
+        </thead>
 
-            <td bgcolor="white" id="A6"></td>
-            <td bgcolor="grey" id="B6"></td>
-            <td bgcolor="white" id="C6"></td>
-            <td bgcolor="grey" id="D6"></td>
-            <td bgcolor="white" id="E6"></td>
-            <td bgcolor="grey" id="F6"></td>
-            <td bgcolor="white" id="G6"></td>
-            <td bgcolor="grey" id="H6"></td>
-        </tr>
-                <tr>
+        <tbody>
 
-            <td bgcolor="grey" id="A5"></td>
-            <td bgcolor="white" id="B5"></td>
-            <td bgcolor="grey" id="C5"></td>
-            <td bgcolor="white" id="D5"></td>
-            <td bgcolor="grey" id="E5"></td>
-            <td bgcolor="white" id="F5"></td>
-            <td bgcolor="grey" id="G5"></td>
-            <td bgcolor="white" id="H5"></td>
-        </tr>
-                <tr>
+            <tr>
+                <td bgcolor="white" class="numbers">8</td>
+                <td bgcolor="white" id="A8" class="field"></td>
+                <td bgcolor="grey" id="B8" class="field"></td>
+                <td bgcolor="white" id="C8" class="field"></td>
+                <td bgcolor="grey" id="D8" class="field"></td>
+                <td bgcolor="white" id="E8" class="field"></td>
+                <td bgcolor="grey" id="F8" class="field"></td>
+                <td bgcolor="white" id="G8" class="field"></td>
+                <td bgcolor="grey" id="H8" class="field"></td>
+                <td bgcolor="white" class="numbers">8</td>
 
-            <td bgcolor="white" id="A4"></td>
-            <td bgcolor="grey" id="B4"></td>
-            <td bgcolor="white" id="C4"></td>
-            <td bgcolor="grey" id="D4"></td>
-            <td bgcolor="white" id="E4"></td>
-            <td bgcolor="grey" id="F4"></td>
-            <td bgcolor="white" id="G4"></td>
-            <td bgcolor="grey" id="H4"></td>
-        </tr>
-                <tr>
+            </tr>
 
-            <td bgcolor="grey" id="A3"></td>
-            <td bgcolor="white" id="B3"></td>
-            <td bgcolor="grey" id="C3"></td>
-            <td bgcolor="white" id="D3"></td>
-            <td bgcolor="grey" id="E3"></td>
-            <td bgcolor="white" id="F3"></td>
-            <td bgcolor="grey" id="G3"></td>
-            <td bgcolor="white" id="H3"></td>
-        </tr>
-                <tr>
+            <tr>
+                <td bgcolor="white" class="numbers">7</td>
+                <td bgcolor="grey" id="A7" class="field"></td>
+                <td bgcolor="white" id="B7" class="field"></td>
+                <td bgcolor="grey" id="C7" class="field"></td>
+                <td bgcolor="white" id="D7" class="field"></td>
+                <td bgcolor="grey" id="E7" class="field"></td>
+                <td bgcolor="white" id="F7" class="field"></td>
+                <td bgcolor="grey" id="G7" class="field"></td>
+                <td bgcolor="white" id="H7" class="field"></td>
+                <td bgcolor="white" class="numbers">7</td>
+            </tr>
 
-            <td bgcolor="white" id="A2"></td>
-            <td bgcolor="grey" id="B2"></td>
-            <td bgcolor="white" id="C2"></td>
-            <td bgcolor="grey" id="D2"></td>
-            <td bgcolor="white" id="E2"></td>
-            <td bgcolor="grey" id="F2"></td>
-            <td bgcolor="white" id="G2"></td>
-            <td bgcolor="grey" id="H2"></td>
-        </tr>
-                <tr>
+            <tr>
+                <td bgcolor="white" class="numbers">6</td>
+                <td bgcolor="white" id="A6" class="field"></td>
+                <td bgcolor="grey" id="B6" class="field"></td>
+                <td bgcolor="white" id="C6" class="field"></td>
+                <td bgcolor="grey" id="D6" class="field"></td>
+                <td bgcolor="white" id="E6" class="field"></td>
+                <td bgcolor="grey" id="F6" class="field"></td>
+                <td bgcolor="white" id="G6" class="field"></td>
+                <td bgcolor="grey" id="H6" class="field"></td>
+                <td bgcolor="white" class="numbers">6</td>
+            </tr>
 
-            <td bgcolor="grey" id="A1"></td>
-            <td bgcolor="white" id="B1"></td>
-            <td bgcolor="grey" id="C1"></td>
-            <td bgcolor="white" id="D1"></td>
-            <td bgcolor="grey" id="E1"></td>
-            <td bgcolor="white" id="F1"></td>
-            <td bgcolor="grey" id="G1"></td>
-            <td bgcolor="white" id="H1"></td>
-        </tr>
+            <tr>
+                <td bgcolor="white" class="numbers">5</td>
+                <td bgcolor="grey" id="A5" class="field"></td>
+                <td bgcolor="white" id="B5" class="field"></td>
+                <td bgcolor="grey" id="C5" class="field"></td>
+                <td bgcolor="white" id="D5" class="field"></td>
+                <td bgcolor="grey" id="E5" class="field"></td>
+                <td bgcolor="white" id="F5" class="field"></td>
+                <td bgcolor="grey" id="G5" class="field"></td>
+                <td bgcolor="white" id="H5" class="field"></td>
+                <td bgcolor="white" class="numbers">5</td>
+            </tr>
 
+            <tr>
+                <td bgcolor="white" class="numbers">4</td>
+                <td bgcolor="white" id="A4" class="field"></td>
+                <td bgcolor="grey" id="B4" class="field"></td>
+                <td bgcolor="white" id="C4" class="field"></td>
+                <td bgcolor="grey" id="D4" class="field"></td>
+                <td bgcolor="white" id="E4" class="field"></td>
+                <td bgcolor="grey" id="F4" class="field"></td>
+                <td bgcolor="white" id="G4" class="field"></td>
+                <td bgcolor="grey" id="H4" class="field"></td>
+                <td bgcolor="white" class="numbers">4</td>
+            </tr>
+
+            <tr>
+                <td bgcolor="white" class="numbers">3</td>
+                <td bgcolor="grey" id="A3" class="field"></td>
+                <td bgcolor="white" id="B3" class="field"></td>
+                <td bgcolor="grey" id="C3" class="field"></td>
+                <td bgcolor="white" id="D3" class="field"></td>
+                <td bgcolor="grey" id="E3" class="field"></td>
+                <td bgcolor="white" id="F3" class="field"></td>
+                <td bgcolor="grey" id="G3" class="field"></td>
+                <td bgcolor="white" id="H3" class="field"></td>
+                <td bgcolor="white" class="numbers">3</td>
+            </tr>
+
+            <tr>
+                <td bgcolor="white" class="numbers">2</td>
+                <td bgcolor="white" id="A2" class="field"></td>
+                <td bgcolor="grey" id="B2" class="field"></td>
+                <td bgcolor="white" id="C2" class="field"></td>
+                <td bgcolor="grey" id="D2" class="field"></td>
+                <td bgcolor="white" id="E2" class="field"></td>
+                <td bgcolor="grey" id="F2" class="field"></td>
+                <td bgcolor="white" id="G2" class="field"></td>
+                <td bgcolor="grey" id="H2" class="field"></td>
+                <td bgcolor="white" class="numbers">2</td>
+            </tr>
+
+            <tr>
+                <td bgcolor="white" class="numbers">1</td>
+                <td bgcolor="grey" id="A1" class="field"></td>
+                <td bgcolor="white" id="B1" class="field"></td>
+                <td bgcolor="grey" id="C1" class="field"></td>
+                <td bgcolor="white" id="D1" class="field"></td>
+                <td bgcolor="grey" id="E1" class="field"></td>
+                <td bgcolor="white" id="F1" class="field"></td>
+                <td bgcolor="grey" id="G1" class="field"></td>
+                <td bgcolor="white" id="H1" class="field"></td>
+                <td bgcolor="white" class="numbers">1</td>
+            </tr>
+
+           <tr class="letters">
+                <td></td>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+                <td>D</td>
+                <td>E</td>
+                <td>F</td>
+                <td>G</td>
+                <td>H</td>
+
+           </tr>
+
+
+
+        </tbody>
 
     </table>
 
