--- a/mysite/templates/base3.html
+++ b/mysite/templates/base3.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static "chess/styles/style5.css" %}">
+    <link rel="stylesheet" href="{% static "chess/styles/6style.css" %}">
     <title>{% block title %}{% endblock %}</title>
       {% block head %}{% endblock %}
 </head>
@@ -11,24 +11,23 @@
 
  <div id="wrapper">
             <header>
-                <img src="{% static "chess/images/header4.jpg" %}" alt="My image">
+                <img src="{% static "chess/images/header8.jpg" %}" alt="image of a chessboard" title="chess board">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'profile' %}">profil</a>
-                    <a href="{% url 'logout'  %}">wyloguj się</a>
+                    <a href="{% url 'profile' %}" id="profile">profile</a>
+                    <a href="{% url 'logout'  %}" id="log-out">Log out</a>
                 {% else %}
-                    <a href="{% url 'register'  %}">zarejestruj się </a>
-                    <a href="{% url 'login'  %}">zaloguj się </a>
+                    <a href="{% url 'register'  %}" id="register">Register </a>
+                    <a href="{% url 'login'  %}" id ="log-in">Log in </a>
                 {% endif %}
             </header>
 
             <nav>
 
 
-                <a href="{% url 'list openings'  %}">debiuty</a>
-                <a href="{% url 'players' %}">gracze</a>
-                <a href="{% url 'chess board' %}">szachownica</a>
-                <a>FIDE</a>
-                <a>literatura</a>
+                <a href="{% url 'list openings'  %}">chess openings</a>
+                <a href="{% url 'players' %}">players</a>
+                <a href="{% url 'chess board' %}">chessboard</a>
+                <a href="https://ratings.fide.com/top.phtml?list=men">FIDE</a>
 
 
             </nav>
