--- a/mysite/templates/users/login.html
+++ b/mysite/templates/users/login.html
@@ -1,8 +1,10 @@
 {% extends 'base3.html' %}
-
+{% load static %}
 {% block title %}login{% endblock %}
 
-
+{% block head %}
+    <link rel="stylesheet" href="{% static "users/styles/1login.css" %}"
+{% endblock %}
 
 {% block content %}
     <form method="post" >
@@ -12,18 +14,17 @@
             <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
 
-        <div class="fieldWrapper">
-            <a>Imie użytkownika</a>
-            {{ form.username }}
-        </div>
 
 
-        <div class="fieldWrapper">
-            <a>Hasło</a>
-            {{ form.password }}
-        </div>
+        <fieldset>
+            <legend>Log in</legend>
+            <p>Name: {{ form.username }}</p>
+            <p>Password: {{ form.password }}</p>
 
-        <button class="btn btn-outline-info" type="submit">Sign up</button>
+            <button class="btn btn-outline-info" type="submit">Sign up</button>
+        </fieldset>
+
+
 
     </form>
 
