--- a/mysite/templates/base3.html
+++ b/mysite/templates/base3.html
@@ -25,6 +25,7 @@
                 <a href="{% url 'list openings'  %}">chess openings</a>
                 <a href="{% url 'players' %}">players</a>
                 <a href="{% url 'chess board' %}">chessboard</a>
+                <a href="{% url 'pawns' %}">chess pawns</a>
                 <a href="https://ratings.fide.com/top.phtml?list=men">FIDE</a>
             </nav>
 
