--- a/mysite/templates/chess/single_chess_opening.html
+++ b/mysite/templates/chess/single_chess_opening.html
@@ -1,4 +1,4 @@
-{% extends 'chess\chess_board.html' %}
+{% extends 'chess/chess_board.html' %}
 {% load static %}
 
 {% block title %}chess opening{% endblock %}
