--- a/mysite/pawn/static/pawn/styles/3pawn.css
+++ b/mysite/pawn/static/pawn/styles/3pawn.css
@@ -4,19 +4,24 @@
     padding: 20px;
     border: 1px solid red;
     margin: auto;
-    width: 50%;
+    width: 70%;
+    height: 800px;
 }
 
 figure {
-    width: 50%;
+    width: 75%;
     margin: auto;
     border: 1px solid yellow;
 }
 
-figure > img {
-    border: 1px solid green;
-    width: 100%;
+#image-div{
+    width: 30%;
+    margin: auto;
+}
 
+#image-div > img {
+    border: 3px solid green;
+    width: 100%;
 }
 
 
@@ -43,4 +48,14 @@ i {
 .left {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
+}
+
+p {
+    font-size: 20px;
+    margin-top: 15px;
+    padding: 20px;
+}
+
+p:nth-child(1n+3){
+  display: none;
 }
