--- a/mysite/player/static/player/styles/4list_players.css
+++ b/mysite/player/static/player/styles/4list_players.css
@@ -22,6 +22,7 @@ section{
     background-color: #F7F7F7;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 5px 10px 5px grey;
 }
 
 .favorite{
@@ -47,11 +48,41 @@ section{
     background-color: inherit;
 }
 
-figcaption {
-    text-aling: center;
-}
-
 .container img{
-    width: 100%;
+    width: 150%;
+    border-radius: 20px;
 }
 
+figure figcaption {
+    width: 150%;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.rating {
+    width: 150%;
+    border: 5px solid red;
+    padding: 20px;
+    text-align: center;
+}
+
+
+input[type="radio"] {
+    display: none;
+}
+
+
+
+ol li {
+    display:inline-block;
+    vertical-align: top;
+    border: 3px solid green;
+
+}
+
+label > img {
+    max-width: 50px;
+    border: 3px solid blue;
+}
