--- a/mysite/templates/player/list_players.html
+++ b/mysite/templates/player/list_players.html
@@ -1,4 +1,5 @@
 {% extends 'base3.html' %}
+{% load player_tags %}
 {% load static %}
 {% block title %} players {% endblock %}
 
@@ -39,7 +40,7 @@
                             --><li>
                                 <input id="b" type="radio" name="rate" value="male">
                                 <label for="b">
-                                    <img class ="star" src="{% static "player/images/star1.png" %}">
+                                    <img class ="star" src="{% static "player/images/star0.png" %}">
                                 </label>
                             </li><!--
 
@@ -67,43 +68,49 @@
 
 
 
-
-                        <p>Your rate:</p>
+                        {% if user.is_authenticated %}
+                        <p class="user">Your rate: {{ player.name }} {{ user_rate|lookup:player.name }}</p>
+                        {% endif %}
                         <ol class="can-change" id="0">
-                            <li>
-                                <input id="f" type="radio" name="rate" value="1">
-                                <label for="a">
-                                    <img class ="star" src="{% static "player/images/star0.png" %}">
-                                </label>
-                            </li><!--
+                            <form  id="form-rate" method="post">
+                                {% csrf_token %}
 
-                            --><li>
-                                <input id="g" type="radio" name="rate" value="2">
-                                <label for="b">
-                                    <img class ="star" src="{% static "player/images/star0.png" %}">
-                                </label>
-                            </li><!--
+                                <li>
+                                    <input id="f" type="radio" name="rate" value="1">
+                                    <label for="a">
+                                        <img class ="star" src="{% static "player/images/star0.png" %}">
+                                    </label>
+                                </li><!--
 
-                            --><li>
-                                <input id="h"type="radio" name="rate" value="3">
-                                <label for="c">
-                                    <img class ="star" src="{% static "player/images/star0.png" %}">
-                                </label>
-                            </li><!--
+                                --><li>
+                                    <input id="g" type="radio" name="rate" value="2">
+                                    <label for="b">
+                                        <img class ="star" src="{% static "player/images/star0.png" %}">
+                                    </label>
+                                </li><!--
 
-                            --><li>
-                                <input id="i" type="radio" name="rate" value="4">
-                                <label for="d">
-                                    <img class ="star" src="{% static "player/images/star0.png" %}">
-                                </label>
-                            </li><!--
+                                --><li>
+                                    <input id="h"type="radio" name="rate" value="3">
+                                    <label for="c">
+                                        <img class ="star" src="{% static "player/images/star0.png" %}">
+                                    </label>
+                                </li><!--
 
-                            --><li>
-                                <input id="j" type="radio" name="rate" value="5">
-                                <label for="e">
-                                    <img class ="star" src="{% static "player/images/star0.png" %}">
-                                </label>
-                            </li>
+                                --><li>
+                                    <input id="i" type="radio" name="rate" value="4">
+                                    <label for="d">
+                                        <img class ="star" src="{% static "player/images/star0.png" %}">
+                                    </label>
+                                </li><!--
+
+                                --><li>
+                                    <input id="j" type="radio" name="rate" value="5">
+                                    <label for="e">
+                                        <img class ="star" src="{% static "player/images/star0.png" %}">
+                                    </label>
+                                </li>
+                            </form>
+
                         </ol>
 
 
@@ -127,11 +134,15 @@
     </table>
 
 <script>
-var path = "{% static "player/images/" %}"
+var path = "{% static "player/images/" %}";
+
+
+
+
 
 </script>
 
-<script src="{% static "player/js/3list_players.js" %}" >
+<script src="{% static "player/js/6list_players.js" %}" >
 </script>
 
 {% endblock %}
